crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_3.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: root
---
policies 0..46
╰─ policy 0..46
   ├─ annotation 0..8
   │  ├─ @ 0..1
   │  ├─ identifier 1..3
   │  ├─ ( 3..4
   │  ╰─ error 4..8
   │     ├─ unterminated string 4..7
   │     ╰─ whitespace 7..8
   ├─ permit 8..14
   ├─ whitespace 14..15
   ├─ scope 15..44
   │  ├─ ( 15..16
   │  ├─ variable definition 16..25
   │  │  ╰─ principal 16..25
   │  ├─ , 25..26
   │  ├─ whitespace 26..27
   │  ├─ variable definition 27..33
   │  │  ╰─ action 27..33
   │  ├─ , 33..34
   │  ├─ whitespace 34..35
   │  ├─ variable definition 35..43
   │  │  ╰─ resource 35..43
   │  ╰─ ) 43..44
   ├─ ; 44..45
   ╰─ whitespace 45..46
