crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_3_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ unclosed_strings_3:1:5
  │
1 │   @id("0)
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ expected `)`
error: expected `;`
  ╭▸ unclosed_strings_3:1:5
  │
1 │   @id("0)
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ expected `;`
error: unexpected token
  ╭▸ unclosed_strings_3:1:5
  │
1 │   @id("0)
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ unexpected token
error: expected `;`
  ╭▸ unclosed_strings_3:2:39
  │
2 │ permit (principal, action, resource);
  ╰╴                                     ━ expected `;`
error: expected `)`
  ╭▸ unclosed_strings_3:1:5
  │
1 │ @id("0)
  ╰╴    ━ expected `)`
error: missing policy effect
  ╭▸ unclosed_strings_3:1:1
  │
1 │ @id("0)
  ╰╴━━━━ expected `permit` or `forbid`
error: missing policy effect
  ╭▸ unclosed_strings_3:1:5
  │
1 │   @id("0)
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource);
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛ expected `permit` or `forbid`
