crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_3_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies [0, 46)
└─Policy [0, 46)
  ├─Annotation [0, 8)
  │ ├─At "@" [0, 1)
  │ ├─Identifier "id" [1, 3)
  │ ├─OpenParenthesis "(" [3, 4)
  │ └─Error [4, 8)
  │   ├─StringUnterminated "\"0)" [4, 7)
  │   └─Whitespace "\n" [7, 8)
  ├─PermitKeyword "permit" [8, 14)
  ├─Whitespace " " [14, 15)
  ├─OpenParenthesis "(" [15, 16)
  ├─VariableDefinition [16, 25)
  │ └─PrincipalKeyword "principal" [16, 25)
  ├─Comma "," [25, 26)
  ├─Whitespace " " [26, 27)
  ├─VariableDefinition [27, 33)
  │ └─ActionKeyword "action" [27, 33)
  ├─Comma "," [33, 34)
  ├─Whitespace " " [34, 35)
  ├─VariableDefinition [35, 43)
  │ └─ResourceKeyword "resource" [35, 43)
  ├─CloseParenthesis ")" [43, 44)
  ├─Semicolon ";" [44, 45)
  └─Whitespace "\n" [45, 46)
