crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_4-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: unterminated string literal
  ╭▸ test:1:5
  │
1 │ @id("0)
  │     ━ string is never closed
  ╰╴
help: add a closing `"` to terminate the string
