crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_4.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ test:1:5
  │
1 │   @id("0)
  │ ┏━━━━━┛
2 │ ┃ permit (principal, action, resource)
3 │ ┃ when {
4 │ ┃     principal.foo = "bar"
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━┛ expected `)`
error: missing policy effect
  ╭▸ test:1:1
  │
1 │ ┏ @id("0)
2 │ ┃ permit (principal, action, resource)
3 │ ┃ when {
4 │ ┃     principal.foo = "bar"
  ╰╴┗━━━━━━━━━━━━━━━━━━━━━┛ expected `permit` or `forbid`
error: missing policy effect
  ╭▸ test:4:22
  │
4 │       principal.foo = "bar"
  │ ┏━━━━━━━━━━━━━━━━━━━━━━┛
5 │ ┃ };
  ╰╴┗━━━┛ expected `permit` or `forbid`
