crates/lowerer/tests/snapshots/upstream_parser_policy__unclosed_strings_4_tree.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
Policies 0..81
├─Policy 0..73
│ └─Annotation 0..73
│   ├─At "@" 0..1
│   ├─Identifier "id" 1..3
│   ├─OpenParenthesis "(" 3..4
│   └─String "\"0)\npermit (principal, action, resource)\nwhen {\n    principal.foo = \"" 4..73
└─Policy 73..81
  └─Error 73..81
    ├─Identifier "bar" 73..76
    └─Error "\"\n};\n" 76..81
