crates/lowerer/tests/snapshots/upstream_parser_policy__variable6-2.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected scope variable
  ╭▸ test:1:9
  │
1 │ permit (var : in 6, action, resource);
  │         ━━━━━━━━━━ not valid in scope
  ╰╴
note: `principal`, `action`, and `resource` are the only scope variables
