crates/lowerer/tests/snapshots/upstream_parser_policy__variable6_diagnostics.snap
---
source: crates/lowerer/tests/upstream_parser_policy.rs
expression: value
---
error: expected `)`
  ╭▸ variable6:1:18
  │
1 │ permit (var : in 6, action, resource);
  ╰╴                 ━ expected `)`
error: expected `;`
  ╭▸ variable6:1:18
  │
1 │ permit (var : in 6, action, resource);
  ╰╴                 ━ expected `;`
error: unexpected token
  ╭▸ variable6:1:18
  │
1 │ permit (var : in 6, action, resource);
  ╰╴                 ━━━━━━━━━━━━━━━━━━━━━ unexpected token
error: expected `permit`
  ╭▸ variable6:1:40
  │
1 │ permit (var : in 6, action, resource);
  ╰╴                                      ━ expected `permit`
error: expected `;`
  ╭▸ variable6:1:40
  │
1 │ permit (var : in 6, action, resource);
  ╰╴                                      ━ expected `;`
